--- a/style.css
+++ b/style.css
@@ -1,24 +1,26 @@
-body{
-margin: auto;
+@import url("https://fonts.googleapis.com/css2?family=Yellowtail&display=swap");
+
+body {
+    margin: auto;
 
 }
 
-main{
-  display: flex;
-  justify-content: space-evenly;
-  /* align-items: center; */
-  flex-direction: column;
-  width: 950px;
-  margin: auto;
+main {
+    display: flex;
+    justify-content: space-evenly;
+    /* align-items: center; */
+    flex-direction: column;
+    width: 950px;
+    margin: auto;
 
 }
 
-main div{
+main div {
     margin: 10px;
-    
+
 }
 
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
@@ -26,54 +28,86 @@ nav{
     margin-bottom: 50px;
     padding: 15px;
 
-    
+
 }
 
-#logo{
+#rss {
+    margin-left: 10px;
+}
+
+#logo {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#delicious{
+#delicious {
+    font-family: 'Yellowtail', cursive;
     font-size: 50px;
     margin: 0;
-    padding:0
+    padding: 0
 }
 
-#logo-text{
+#logo-text {
     font-size: 10px;
     margin: 0;
-    padding:0
+    padding: 0
 }
 
-#recipe{
-    
+#recipe {}
 
-}
-
-#top{
+#top {
     display: flex;
+    justify-content: space-between;
+}
+
+#top-pizza {
+    margin-right: 300px;
+
+}
+
+#top-pizza h2 {
+    font-style: bold;
+    font-size: 50px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-bottom: 0px;
+}
+
+h4 {
+    margin-top: 0;
+    color: grey;
+    font-weight: 100;
+}
+
+#top-print {
+    display: flex;
+    align-items: center;
     justify-content: space-evenly;
+    margin-left: 100px;
+    width: 100px;
 }
 
-#top-pizza{
-    
+#top-print h5 {
+    padding: 0px;
+}
+
+#print {
+    margin: 0px;
+    padding: 0;
+    width: 10px;
+    height: 10px;
+
 
 }
 
-#top-print{
-  
+article p {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: small;
+    color: #99989d;
 }
 
-#print{
-    width: 25px;
-    height: 25px;
+#recipe {
 
-}
-
-#recipe{
-    
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -81,28 +115,85 @@ nav{
 
 }
 
-.list-article{
-    
+.list-article {
+
     margin-right: 50%;
     margin-left: 25px;
     padding: 5px;
 }
 
-#b-recipe{
-    background-image: url(img/list-bg.png);
+#b-recipe {
+    background-image: url("img/list-bg.png");
 }
 
-footer{
+footer {
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
 }
 
-#van{
+#footer-div {
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+}
+
+#actual-footer-div {
+    margin-top: 50px;
+}
+
+#actual-footer-div span {
+    text-align: center;
+    font-size: small;
+}
+
+#copyright-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#van {
     text-align: left;
-    width: 800px;
+    width: 600px;
 }
 
-.repeat{
- background-image: url("img/hr-img.png");
-  background-repeat: repeat-x;
+#profile-pic {
+    height: 75px;
 }
+
+h3 {
+    margin: auto;
+    color: #3a3b3c;
+}
+
+h3, #vanp {
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: medium;
+}
+
+#vanp {
+    color: #99989d;
+}
+
+
+.repeat-one {
+    background-image: url("img/hr-img.png");
+    background-repeat: space;
+}
+
+button {
+    align-self: center;
+    max-height: 50px;
+    width: 150px;
+    background-color: brown;
+    color: white;
+}
+
+.checkbox {
+    margin: auto;
+    width: 150px;
+}
+
+
